# slimformers

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/slimformers/: __init__.py  cli.py  discovery.py  lora.py  pruner.py
tests/: dataset.txt  test_bert.py  test_core.py  test_default_discover_fallback.py  test_mistral.py  test_opt.py  test_rebuild_linear_conv1d.py
