[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slimformers"
version = "1.4.17"
description = "Lightweight Optimization and Model Adaptation"
authors = [
  { name="Caden Chen", email="cadenc.woss@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.38.0",
  "peft>=0.7.0",
  "rich>=13.0.0",
  "psutil>=5.9.0"
]

keywords = [
  "transformers",
  "LLM",
  "pruning",
  "LoRA",
  "model optimization",
  "compression",
  "transformer fine-tuning",
]

[project.urls]
Homepage = "https://slimformers.vercel.app/"
Source = "https://github.com/sakufish/slimformers/"

[tool.setuptools.packages.find]
where = ["src"]
