[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slimformers"
version = "1.10.8"
description = "Lightweight Optimization and Model Adaptation For Transformers"
authors = [
  { name="Caden Chen", email="cadenc.woss@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.38.0",
  "peft>=0.7.0",
  "rich>=13.0.0",
  "psutil>=5.9.0"
]

keywords = [
  "transformers",
  "LLM",
  "pruning",
  "LoRA",
  "model optimization",
  "compression",
  "transformer fine-tuning",
  "LLM compression",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://slimformers.vercel.app/"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
slimformers = "slimformers.cli:main"

[tool.setuptools.package-data]
"slimformers" = ["py.typed"]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.3.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "types-psutil>=5.9.5.20240517",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]